--- a/.github/workflows/branch-name-check.yml
+++ b/.github/workflows/branch-name-check.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Check branch name
         run: |
           BRANCH_NAME=$(echo "${GITHUB_REF#refs/heads/}")
-          if [[ ! $BRANCH_NAME =~ ^GAIA-\d+ ]]; then
+          if [[ ! $BRANCH_NAME =~ ^GAIA-[0-9]* ]]; then
             echo "Branch $BRANCH_NAME does not start with: 'GAIA-<number>'"
             exit 1
           fi
